--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express_blog",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,11 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "connect-mongo": "^6.0.0",
     "dotenv": "^16.4.0",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "express-fileupload": "^1.5.2",
+    "express-session": "^1.19.0",
     "mongoose": "^9.1.6",
+    "sanitize-html": "^2.17.0",
     "startbootstrap-clean-blog": "^6.0.9"
   },
   "devDependencies": {
