--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^6.0.0",
     "dotenv": "^16.4.0",
     "ejs": "^4.0.1",
